fixed browser whitespace issue

--- a/style.scss
+++ b/style.scss
@@ -48,7 +48,7 @@
         background-color: rgba(216, 184, 110, 0.34);
         font-weight: 700;
         font-size: medium;
-        white-space: normal;
+        white-space: pre;
         resize: none;
 
         &:focus,
